# paper-extract-pipeline

./: .env.template  main.py  pyproject.toml  requirements.txt  route.py
controllers/: fetch_controller.py  generate_controller.py  judge_controller.py
models/: exceptions.py  models.py  route_model.py
service/: arxiv_svc.py  chunk_svc.py  embed_svc.py  eval_svc.py  extract_svc.py  judge_svc.py  neo4j_svc.py  openrouter_svc.py  query_svc.py
utils/: constants.py  logger.py  utils.py
