[project]
name = "paper-extract-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery[redis,sqlalchemy]>=5.5.3",
    "fastapi[standard]>=0.116.1",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]
